--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@fontsource/roboto": "^4.2.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "clsx": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
